[WebPayments] Setting hidden views in view stack invisible

Setting visibility on these views is important, among other
reasons, for screen reader purposes.

BUG=733684

Review-Url: https://codereview.chromium.org/2942943002
Cr-Commit-Position: refs/heads/master@{#480549}

Former-commit-id: 0c486ef46927e0b1aef9f8b352b4aaedebb4ca5b